@@ -159,16 +159,6 @@ void init_executor(TSRMLS_D) /* {{{ */
 	zend_vm_stack_push((void *) NULL TSRMLS_CC);
 
 	zend_hash_init(&EG(symbol_table), 50, NULL, ZVAL_PTR_DTOR, 0);
-	{
-		zval *globals;
-
-		ALLOC_ZVAL(globals);
-		Z_SET_REFCOUNT_P(globals, 1);
-		Z_SET_ISREF_P(globals);
-		Z_TYPE_P(globals) = IS_ARRAY;
-		Z_ARRVAL_P(globals) = &EG(symbol_table);
-		zend_hash_update(&EG(symbol_table), "GLOBALS", sizeof("GLOBALS"), &globals, sizeof(zval *), NULL);
-	}
 	EG(active_symbol_table) = &EG(symbol_table);
 
 	zend_llist_apply(&zend_extensions, (llist_apply_func_t) zend_extension_activator TSRMLS_CC);
